[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blainder"
version = "0.0.1"
description = "Fork of the original Blainder (https://github.com/ln-12/blainder-range-scanner) for creating synthetic lidar scans using Blender as Python Module."
requires-python = ">=3.10"

dependencies = [
    "bpy",
    "numpy",
    "laspy",
    "h5py",
    "pascal_voc_writer",
    "pypng"
]